--- a/Chapter1_DNA.qmd
+++ b/Chapter1_DNA.qmd
@@ -6,18 +6,18 @@ format: html
 ::: callout-tip
 ## Abstract
 
-In this chapter we'll learn how to create a high fidelity DNA datasets. Two datasets I have created are available on Huggingface: [the human CDS](https://huggingface.co/datasets/MichelNivard/Human-genome-CDS-GRCh38) and [the CDS of 13 vertebrae species](https://huggingface.co/datasets/MichelNivard/Coding_Sequences_13_Species).
+In this chapter, we'll learn how to create high-fidelity DNA datasets. Two datasets I have created are available on Huggingface: [the human CDS](https://huggingface.co/datasets/MichelNivard/Human-genome-CDS-GRCh38) and [the CDS of 13 vertebrate species](https://huggingface.co/datasets/MichelNivard/Coding_Sequences_13_Species).
 
 Scripts for this chapter are found here: <https://github.com/MichelNivard/Biological-language-models/tree/main/scripts/DNA/Chapter_1>
 :::
 
 ## Garbage in garbage out
 
-High-quality data is essential for training effective machine learning models. In natural language processing (NLP), researchers invest significant effort in curating clean datasets from raw internet text. For example a dataset like 'fineweb-edu' contains English text that is of very high quality. Models trained on fineweb-edu (and similar high quality datasets) will improve MUCH faster then the equivalent model trained on other less carefully processed and evaluated datasets.
+High-quality data is essential for training effective machine learning models. In natural language processing (NLP), researchers invest significant effort in curating clean datasets from raw internet text. For example, a dataset like 'fineweb-edu' contains English text that is of very high quality. Models trained on fineweb-edu (and similar high-quality datasets) will improve much faster than the equivalent model trained on other less carefully processed and evaluated datasets.
 
-![Relative training efficiency using a high quality dataset like fineweb-edu and other massive datasets of English language texts. Image obtained from: https://huggingface.co/datasets/HuggingFaceFW/fineweb-edu](https://cdn-uploads.huggingface.co/production/uploads/61c141342aac764ce1654e43/QqXOM8h_ZjjhuCv71xmV7.png){fig-align="center"}
+![Relative training efficiency using a high-quality dataset like fineweb-edu and other massive datasets of English language texts. Image obtained from: https://huggingface.co/datasets/HuggingFaceFW/fineweb-edu](https://cdn-uploads.huggingface.co/production/uploads/61c141342aac764ce1654e43/QqXOM8h_ZjjhuCv71xmV7.png){fig-align="center"}
 
-Those with experience with **genetics** will know most of what I am about to explain when it comes to the sources of genetic data and the file formats these come in. Those with an **ML** background will be very familiar with Huggingface and the amazing data/model/training integration their libraries offer. Assembing high quality genomics datasets for language modeling requires familiarity with both. When working with DNA, RNA, and protein sequences, the authoritative sources of data are specialized databases and infrastructures rather than data scraped from the internet. If you want to learn to train DNA/RNA/Protein-based language model, we must learn how, and where, to retrieve data and convert it into a structured format.
+Those with experience in **genetics** will know most of what I am about to explain when it comes to the sources of genetic data and the file formats these come in. Those with an **ML** background will be very familiar with Huggingface and the amazing data/model/training integration their libraries offer. Assembling high-quality genomics datasets for language modeling requires familiarity with both. When working with DNA, RNA, and protein sequences, the authoritative sources of data are specialized databases and infrastructures rather than data scraped from the internet. If you want to learn to train DNA/RNA/Protein-based language models, we must learn how, and where, to retrieve data and convert it into a structured format.
 
 In this tutorial, we will begin by collecting coding DNA sequences (CDS) from the human genome using the Ensembl database via BioMart. The goal is to store these sequences in a format suitable for training a DNA-based language model. We will then upload the processed data to [Huggingface](https://huggingface.co), a platform for hosting datasets and models for machine learning tasks.
 
@@ -25,9 +25,9 @@ This chapter will introduce key biological and computational concepts, ensuring 
 
 ## Understanding Ensembl and BioMart
 
-Fortunately for us, there is decades of work cleaning up genomic data and we can just go and get it from US government funded websites, where it is deposited by the global scientific community. **Ensembl** is a genomic database that provides extensive annotations for various species, including humans. It offers access to gene sequences, transcript annotations, and protein-coding information. One of its most powerful tools is **BioMart**, a flexible data retrieval system that allows users to download specific genomic datasets easily.
+Fortunately for us, there is decades of work cleaning up genomic data, and we can just go and get it from US government-funded websites, where it is deposited by the global scientific community. **Ensembl** is a genomic database that provides extensive annotations for various species, including humans. It offers access to gene sequences, transcript annotations, and protein-coding information. One of its most powerful tools is **BioMart**, a flexible data retrieval system that allows users to download specific genomic datasets easily.
 
-If we want t work with the data in a language model its efficient to store it in a format that is tailored for machine learning libraries. Unlike text-based NLP datasets, genomic data is structured differently and must be properly formatted before use in a model.
+If we want to work with the data in a language model, it's efficient to store it in a format that is tailored for machine learning libraries. Unlike text-based NLP datasets, genomic data is structured differently and must be properly formatted before use in a model.
 
 ### What Are FASTA Files?
 
@@ -35,7 +35,7 @@ A **FASTA file** is a simple text-based format used for storing biological seque
 
 There is a very comprehensive Wikipedia entry on the FASTA format.
 
-"Sequences may be protein sequences or nucleic acid sequences, and they can contain gaps or alignment characters (see sequence alignment). Sequences are expected to be represented in the standard IUB/IUPAC amino acid and nucleic acid codes, with these exceptions: lower-case letters are accepted and are mapped into upper-case; a single hyphen or dash can be used to represent a gap character; and in amino acid sequences, U and \* are acceptable letters (see below). Numerical digits are not allowed but are used in some databases to indicate the position in the sequence." ((source: <https://en.wikipedia.org/wiki/FASTA_format>))
+"Sequences may be protein sequences or nucleic acid sequences, and they can contain gaps or alignment characters (see sequence alignment). Sequences are expected to be represented in the standard IUB/IUPAC amino acid and nucleic acid codes, with these exceptions: lower-case letters are accepted and are mapped into upper-case; a single hyphen or dash can be used to represent a gap character; and in amino acid sequences, U and \* are acceptable letters (see below). Numerical digits are not allowed but are used in some databases to indicate the position in the sequence." ((source: <https://en.wikipedia.org/wiki/FASTA_format>))
 
 | Nucleic Acid Code | Meaning | Mnemonic |
 |:----------------------:|:----------------------:|:----------------------:|
@@ -44,17 +44,17 @@ There is a very comprehensive Wikipedia entry on the FASTA format.
 | G | G | [**G**uanine](https://en.wikipedia.org/wiki/Guanine "Guanine") |
 | T | T | [**T**hymine](https://en.wikipedia.org/wiki/Thymine "Thymine") |
 | U | U | [**U**racil](https://en.wikipedia.org/wiki/Uracil "Uracil") |
-| \(i\) | i | [**i**nosine](https://en.wikipedia.org/wiki/Inosine "Inosine") (non-standard) |
+| \(i\) | i | [**i**nosine](https://en.wikipedia.org/wiki/Inosine "Inosine") (non-standard) |
 | R | A or G (I) | [pu**R**ine](https://en.wikipedia.org/wiki/Purine "Purine") |
 | Y | C, T or U | [p**Y**rimidines](https://en.wikipedia.org/wiki/Pyrimidine "Pyrimidine") |
-| K | G, T or U | bases which are [**K**etones](https://en.wikipedia.org/wiki/Ketone "Ketone") |
-| M | A or C | bases with [a**M**ino groups](https://en.wikipedia.org/wiki/Amino "Amino") |
+| K | G, T or U | bases which are [**K**etones](https://en.wikipedia.org/wiki/Ketone "Ketone") |
+| M | A or C | bases with [a**M**ino groups](https://en.wikipedia.org/wiki/Amino "Amino") |
 | S | C or G | **S**trong interaction |
 | W | A, T or U | **W**eak interaction |
-| B | not A (i.e. C, G, T or U) | **B** comes after A |
-| D | not C (i.e. A, G, T or U) | **D** comes after C |
-| H | not G (i.e., A, C, T or U) | **H** comes after G |
-| V | neither T nor U (i.e. A, C or G) | **V** comes after U |
+| B | not A (i.e. C, G, T or U) | **B** comes after A |
+| D | not C (i.e. A, G, T or U) | **D** comes after C |
+| H | not G (i.e., A, C, T or U) | **H** comes after G |
+| V | neither T nor U (i.e. A, C or G) | **V** comes after U |
 | N | A C G T U | **N**ucleic acid |
 | \- | gap of indeterminate length |  |
 
@@ -63,7 +63,7 @@ The amino acid codes supported (22 amino acids and 3 special codes) are:
 | Amino Acid Code | Meaning |
 |:----------------------------------:|:----------------------------------:|
 | A | [Alanine](https://en.wikipedia.org/wiki/Alanine "Alanine") |
-| B | [Aspartic acid](https://en.wikipedia.org/wiki/Aspartic_acid "Aspartic acid") (D) or [Asparagine](https://en.wikipedia.org/wiki/Asparagine "Asparagine") (N) |
+| B | [Aspartic acid](https://en.wikipedia.org/wiki/Aspartic_acid "Aspartic acid") (D) or [Asparagine](https://en.wikipedia.org/wiki/Asparagine "Asparagine") (N) |
 | C | [Cysteine](https://en.wikipedia.org/wiki/Cysteine "Cysteine") |
 | D | [Aspartic acid](https://en.wikipedia.org/wiki/Aspartic_acid "Aspartic acid") |
 | E | [Glutamic acid](https://en.wikipedia.org/wiki/Glutamic_acid "Glutamic acid") |
@@ -71,35 +71,35 @@ The amino acid codes supported (22 amino acids and 3 special codes) are:
 | G | [Glycine](https://en.wikipedia.org/wiki/Glycine "Glycine") |
 | H | [Histidine](https://en.wikipedia.org/wiki/Histidine "Histidine") |
 | I | [Isoleucine](https://en.wikipedia.org/wiki/Isoleucine "Isoleucine") |
-| J | [Leucine](https://en.wikipedia.org/wiki/Leucine "Leucine") (L) or [Isoleucine](https://en.wikipedia.org/wiki/Isoleucine "Isoleucine") (I) |
+| J | [Leucine](https://en.wikipedia.org/wiki/Leucine "Leucine") (L) or [Isoleucine](https://en.wikipedia.org/wiki/Isoleucine "Isoleucine") (I) |
 | K | [Lysine](https://en.wikipedia.org/wiki/Lysine "Lysine") |
 | L | [Leucine](https://en.wikipedia.org/wiki/Leucine "Leucine") |
 | M | [Methionine](https://en.wikipedia.org/wiki/Methionine "Methionine")/[Start codon](https://en.wikipedia.org/wiki/Start_codon "Start codon") |
 | N | [Asparagine](https://en.wikipedia.org/wiki/Asparagine "Asparagine") |
-| O | [Pyrrolysine](https://en.wikipedia.org/wiki/Pyrrolysine "Pyrrolysine") (rare) |
+| O | [Pyrrolysine](https://en.wikipedia.org/wiki/Pyrrolysine "Pyrrolysine") (rare) |
 | P | [Proline](https://en.wikipedia.org/wiki/Proline "Proline") |
 | Q | [Glutamine](https://en.wikipedia.org/wiki/Glutamine "Glutamine") |
 | R | [Arginine](https://en.wikipedia.org/wiki/Arginine "Arginine") |
 | S | [Serine](https://en.wikipedia.org/wiki/Serine "Serine") |
 | T | [Threonine](https://en.wikipedia.org/wiki/Threonine "Threonine") |
-| U | [Selenocysteine](https://en.wikipedia.org/wiki/Selenocysteine "Selenocysteine") (rare) |
+| U | [Selenocysteine](https://en.wikipedia.org/wiki/Selenocysteine "Selenocysteine") (rare) |
 | V | [Valine](https://en.wikipedia.org/wiki/Valine "Valine") |
 | W | [Tryptophan](https://en.wikipedia.org/wiki/Tryptophan "Tryptophan") |
 | Y | [Tyrosine](https://en.wikipedia.org/wiki/Tyrosine "Tyrosine") |
-| Z | [Glutamic acid](https://en.wikipedia.org/wiki/Glutamic_acid "Glutamic acid") (E) or [Glutamine](https://en.wikipedia.org/wiki/Glutamine "Glutamine") (Q) |
+| Z | [Glutamic acid](https://en.wikipedia.org/wiki/Glutamic_acid "Glutamic acid") (E) or [Glutamine](https://en.wikipedia.org/wiki/Glutamine "Glutamine") (Q) |
 | X | any |
 | \* | translation stop |
 | \- | gap of indeterminate length |
 
-You'll notice the FASTA format has a well defined structure, and it could be leveraged to build a complete tokenizer, for now though our 4 character (+6 special characters) tokenizer will have to do.
+You'll notice the FASTA format has a well-defined structure, and it could be leveraged to build a complete tokenizer. For now, though, our 4-character (+6 special characters) tokenizer will have to do.
 
 ### Why Focus on Coding DNA Sequences (CDS)?
 
 In the example, we retrieve the **human coding DNA sequences (CDS)**, which represent the DNA sequence of protein-coding regions of genes.
 
-While our ultimate goal is to model the entire human genome—and potentially multiple genomes across species or individuals—such tasks require significant computational resources. The tutorials in this book are designed to be accessible, running efficiently on a MacBook or Google Colab. Therefore, we focus on **CDS**, which are highly structured DNA sequences within genes, that directly transcribed into RNA which is in turn translate into proteins. the Table below contains the direct translation from 3 letter DNA sequence to amino-acid (which are the building blocks of proteins).
+While our ultimate goal is to model the entire human genome—and potentially multiple genomes across species or individuals—such tasks require significant computational resources. The tutorials in this book are designed to be accessible, running efficiently on a MacBook or Google Colab. Therefore, we focus on **CDS**, which are highly structured DNA sequences within genes, that are directly transcribed into RNA which is in turn translated into proteins. The table below contains the direct translation from 3-letter DNA sequences to amino acids (which are the building blocks of proteins).
 
-![The Genetic code to translate codins (3 leter DNA sequences) to amino-acids that are in turn the building blocks of proteins (source: https://a-little-book-of-r-for-bioinformatics.readthedocs.io/en/latest/\_images/P7_image1.png)](images/paste-3.png){fig-align="center"}
+![The Genetic code to translate codins (3-letter DNA sequences) to amino-acids that are in turn the building blocks of proteins (source: https://a-little-book-of-r-for-bioinformatics.readthedocs.io/en/latest/_images/P7_image1.png)](images/paste-3.png){fig-align="center"}
 
 In contrast, much of the rest of the genome consists of regulatory regions, which are more complex and less structured. CDS sequences provide a strong foundation for a small DNA-based language model because they contain well-defined biological structure, making them a logical starting point before expanding to more complex genomic elements.
 
@@ -111,9 +111,9 @@ By storing our dataset on Hugging Face, we enable efficient training and collabo
 
 ## The Script: Downloading and Formatting Human CDS Data
 
-Below is the R script that downloads human CDS from Ensembl using BioMart, extracts metadata, and saves the processed data into a CSV file. the package we use, `biomartr` isn't the official R package but its a great option! it has very extensive documentation, so if you want to download other sequences in the future make sure to start here: <https://docs.ropensci.org/biomartr/>
+Below is the R script that downloads human CDS from Ensembl using BioMart, extracts metadata, and saves the processed data into a CSV file. The package we use, `biomartr`, isn't the official R package, but it's a great option! It has very extensive documentation, so if you want to download other sequences in the future, make sure to start here: <https://docs.ropensci.org/biomartr/>
 
-``` r
+```r
 # Install necessary packages
 install.packages("biomartr", dependencies = TRUE)
 if (!requireNamespace("BiocManager", quietly = TRUE)) {
@@ -173,7 +173,7 @@ write.csv(metadata_df, "genome_sequences.csv", row.names = FALSE, quote = TRUE)
 head(metadata_df)
 ```
 
-You can run the script yourself, but I have also gone ahead and uploaded it to huggingface: <https://huggingface.co/datasets/MichelNivard/Human-genome-CDS-GRCh38>
+You can run the script yourself, but I have also gone ahead and uploaded it to Huggingface: <https://huggingface.co/datasets/MichelNivard/Human-genome-CDS-GRCh38>
 
 ## Summary
 
